fixed response content for PUT and POST
